@@ -2,7 +2,6 @@ package ru.job4j.lambda;
 
 import org.junit.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.Matchers.is;
@@ -12,14 +11,14 @@ public class DiapasonTest {
     @Test
     public void whenLinearFunctionThenLinearResults() {
         List<Double> result = Diapason.diapasonCalc(5, 8, x -> 2 * x + 1);
-        List<Double> expected = Arrays.asList(11D, 13D, 15D);
+        List<Double> expected = List.of(11D, 13D, 15D);
         assertThat(result, is(expected));
     }
 
     @Test
     public void whenQuadraticFunctionThenQuadraticResults() {
         List<Double> result = Diapason.diapasonCalc(5, 8, x -> Math.pow(x, 2) + 2 * x + 1);
-        List<Double> expected = Arrays.asList(36D, 49D, 64D);
+        List<Double> expected = List.of(36D, 49D, 64D);
         assertThat(result, is(expected));
     }
 
@@ -27,7 +26,7 @@ public class DiapasonTest {
     public void whenExponentialFunctionThenExponentialResults() {
         final int a = 3;
         List<Double> result = Diapason.diapasonCalc(5, 8, x -> Math.pow(a, x - 1) + 1);
-        List<Double> expected = Arrays.asList(82D, 244D, 730D);
+        List<Double> expected = List.of(82D, 244D, 730D);
         assertThat(result, is(expected));
     }
 }
